Fix button contrast

--- a/components/footer.module.scss
+++ b/components/footer.module.scss
@@ -9,6 +9,6 @@
 }
 
 .copyright {
-  color: #525252;
+  color: gray;
   padding-bottom: 1rem;
 }
