--- a/components/more.module.scss
+++ b/components/more.module.scss
@@ -6,7 +6,7 @@
 
 .moreButton {
   padding: 0.5rem;
-  background: grey;
+  background: #686868;
   color: white;
   border-radius: 3rem;
   min-width: 10rem;
