--- a/components/social.module.scss
+++ b/components/social.module.scss
@@ -10,7 +10,7 @@
 }
 
 .link {
-  color: #525252;
+  color: gray;
   vertical-align: sub;
   display: inline-block;
   width: 3rem;
